@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021 Oracle and/or its affiliates.
+ * Copyright (c) 2019, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,22 +19,24 @@ package io.helidon.tests.bookstore;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.System.Logger.Level;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Queue;
-import java.util.logging.Logger;
 
-import io.helidon.common.http.Http;
-import io.helidon.common.http.MediaType;
-import io.helidon.media.jsonp.JsonpSupport;
-import io.helidon.webclient.WebClient;
-import io.helidon.webclient.WebClientResponse;
+import io.helidon.common.media.type.MediaTypes;
+import io.helidon.http.HeaderNames;
+import io.helidon.http.Status;
+import io.helidon.webclient.api.HttpClientResponse;
+import io.helidon.webclient.api.WebClient;
 
 import com.oracle.bedrock.runtime.Application;
 import com.oracle.bedrock.runtime.LocalPlatform;
@@ -46,15 +48,15 @@ import jakarta.json.JsonArray;
 import jakarta.json.JsonObject;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
+import static org.hamcrest.CoreMatchers.anyOf;
 import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.startsWith;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.startsWith;
 
 class MainTest {
 
@@ -64,7 +66,7 @@ class MainTest {
     private static final LocalPlatform localPlatform = LocalPlatform.get();
     private static final String MODULE_NAME_MP = "io.helidon.tests.apps.bookstore.mp";
     private static final String MODULE_NAME_SE = "io.helidon.tests.apps.bookstore.se";
-    private static final Logger LOGGER = Logger.getLogger(MainTest.class.getName());
+    private static final System.Logger LOGGER = System.getLogger(MainTest.class.getName());
 
     /**
      * Representation of a Helidon application. Encapsulates the
@@ -86,11 +88,11 @@ class MainTest {
         }
 
         URL getHealthUrl() throws MalformedURLException {
-            return new URL("http://localhost:" + this.port + "/health");
+            return URI.create("http://localhost:" + this.port + "/health").toURL();
         }
 
         URL getBaseUrl() throws MalformedURLException {
-            return new URL("http://localhost:" + this.port);
+            return URI.create("http://localhost:" + this.port).toURL();
         }
 
         void waitForApplicationDown() throws Exception {
@@ -110,27 +112,31 @@ class MainTest {
         private void waitForApplication(boolean toBeUp) throws Exception {
             long timeout = 15 * 1000; // 15 seconds should be enough to start/stop the server
             long now = System.currentTimeMillis();
+            int count = 0;
             String operation = (toBeUp ? "start" : "stop");
             URL url = getHealthUrl();
-            LOGGER.info("Waiting for application to " + operation);
+            LOGGER.log(Level.INFO, "Waiting for application to " + operation);
 
             HttpURLConnection conn = null;
             int responseCode;
             do {
                 Thread.sleep(500);
                 if ((System.currentTimeMillis() - now) > timeout) {
-                    Assertions.fail("Application failed to " + operation);
+                    Assertions.fail("Application failed to " + operation + ": count=" + count);
                 }
                 try {
+                    count++;
                     conn = (HttpURLConnection) url.openConnection();
-                    conn.setConnectTimeout(500);
+                    conn.setConnectTimeout(1000);
                     responseCode = conn.getResponseCode();
                     if (toBeUp && responseCode != 200) {
-                        LOGGER.info("Waiting for application to " + operation + ": Bad health response  " + responseCode);
+                        LOGGER.log(Level.INFO, "Waiting for application to " + operation + ": Bad health response  "
+                                + responseCode);
                     }
                 } catch (Exception ex) {
                     if (toBeUp) {
-                        LOGGER.info("Waiting for application to " + operation + ": Unable to connect to " + url.toString() + ": " + ex);
+                        LOGGER.log(Level.INFO, "Waiting for application to " + operation + ": Unable to connect to "
+                                + url.toString() + ": " + ex);
                     }
                     responseCode = -1;
                 }
@@ -138,7 +144,7 @@ class MainTest {
                     conn.disconnect();
                 }
             } while ((toBeUp && responseCode != 200) || (!toBeUp && responseCode != -1));
-            LOGGER.info("Application " + operation + " successful" );
+            LOGGER.log(Level.INFO, "Application " + operation + " successful");
         }
     }
 
@@ -151,9 +157,9 @@ class MainTest {
     /**
      * Start the application using the application jar and classpath
      *
-     * @param appJarPath    Path to jar file with application
-     * @param javaArgs      Additional java arguments to pass
-     * @throws Exception    Error starting the application
+     * @param appJarPath Path to jar file with application
+     * @param javaArgs Additional java arguments to pass
+     * @throws Exception Error starting the application
      */
     HelidonApplication startTheApplication(String appJarPath, List<String> javaArgs) throws Exception {
         int port = localPlatform.getAvailablePorts().next();
@@ -167,10 +173,10 @@ class MainTest {
     /**
      * Start the application using the application jar and module path
      *
-     * @param appJarPath    Path to jar file with application
-     * @param javaArgs      Additional java arguments to pass
-     * @param moduleName    Name of application's module that contains Main
-     * @throws Exception    Error starting the application
+     * @param appJarPath Path to jar file with application
+     * @param javaArgs Additional java arguments to pass
+     * @param moduleName Name of application's module that contains Main
+     * @throws Exception Error starting the application
      */
     HelidonApplication startTheApplicationModule(String appJarPath, List<String> javaArgs, String moduleName) throws Exception {
         int port = localPlatform.getAvailablePorts().next();
@@ -205,43 +211,38 @@ class MainTest {
             Thread.sleep(500);
         } while (System.currentTimeMillis() < maxTime);
 
-        String eol = System.getProperty("line.separator");
+        String eol = System.lineSeparator();
         Assertions.fail("quickstart " + edition + " did not exit as expected." + eol
-                                + eol
-                                + "stdOut: " + stdOut + eol
-                                + eol
-                                + " stdErr: " + console.getCapturedErrorLines());
+                + eol
+                + "stdOut: " + stdOut + eol
+                + eol
+                + " stdErr: " + console.getCapturedErrorLines());
         application.close();
     }
 
-    @Test
-    void basicTestJsonP() throws Exception {
-        runJsonFunctionalTest("se", "jsonp");
+    @ParameterizedTest
+    @ValueSource(strings = {"se", "mp"})
+    void basicTestJson(String edition) throws Exception {
+        // Run using the default json library for the edition
+        runJsonFunctionalTest(edition, "");
     }
 
-    @Test
-    void basicTestJsonB() throws Exception {
-        runJsonFunctionalTest("se", "jsonb");
+    @ParameterizedTest
+    @ValueSource(strings = {"se"})
+    void basicTestJsonB(String edition) throws Exception {
+        runJsonFunctionalTest(edition, "jsonb");
     }
 
-    @Test
-    void basicTestJackson() throws Exception {
-        runJsonFunctionalTest("se", "jackson");
+    @ParameterizedTest
+    @ValueSource(strings = {"se"})
+    void basicTestJackson(String edition) throws Exception {
+        runJsonFunctionalTest(edition, "jackson");
     }
 
-    @Test
-    void basicTestJsonMP() throws Exception {
-        runJsonFunctionalTest("mp", "");
-    }
-
-    @Test
-    void basicTestMetricsHealthSE() throws Exception {
-        runMetricsAndHealthTest("se", "jsonp", false);
-    }
-
-    @Test
-    void basicTestMetricsHealthMP() throws Exception {
-        runMetricsAndHealthTest("mp", "", false);
+    @ParameterizedTest
+    @ValueSource(strings = {"se", "mp"})
+    void basicTestMetricsHealth(String edition) throws Exception {
+        runMetricsAndHealthTest(edition, "", false);
     }
 
     @Test
@@ -254,16 +255,10 @@ class MainTest {
         runMetricsAndHealthTest("se", "jackson", false);
     }
 
-    @Test
-    @Disabled("3.0.0-JAKARTA")
-    void basicTestMetricsHealthSEModules() throws Exception {
-        runMetricsAndHealthTest("se", "jsonp", true);
-    }
-
-    @Test
-    @Disabled("3.0.0-JAKARTA")
-    void basicTestMetricsHealthMPModules() throws Exception {
-        runMetricsAndHealthTest("mp", "", true);
+    @ParameterizedTest
+    @ValueSource(strings = {"se", "mp"})
+    void basicTestMetricsHealthModules(String edition) throws Exception {
+        runMetricsAndHealthTest(edition, "", true);
     }
 
     /**
@@ -272,8 +267,8 @@ class MainTest {
      * So we set a system property to select the library to use before starting
      * the server
      *
-     * @param edition     "mp", "se"
-     * @param jsonLibrary "jsonp", "jsonb" or "jackson"
+     * @param edition "mp", "se"
+     * @param jsonLibrary "jsonp" or "jsonb"
      * @throws Exception on test failure
      */
     private void runJsonFunctionalTest(String edition, String jsonLibrary) throws Exception {
@@ -287,55 +282,43 @@ class MainTest {
         }
 
         HelidonApplication application = startTheApplication(editionToJarPath(edition), systemPropertyArgs);
-        WebClient webClient = WebClient.builder()
-                .baseUri(application.getBaseUrl())
-                .addMediaSupport(JsonpSupport.create())
-                .build();
+        try {
+            WebClient webClient = WebClient.builder()
+                    .baseUri(application.getBaseUrl().toURI())
+                    .build();
 
-        webClient.get()
-                .path("/books")
-                .request(JsonArray.class)
-                .thenAccept(bookArray -> assertThat("Number of books", bookArray.size(), is(numberOfBooks)))
-                .toCompletableFuture()
-                .get();
+            JsonArray bookArray = webClient.get()
+                    .path("/books")
+                    .requestEntity(JsonArray.class);
+            assertThat("Number of books", bookArray.size(), is(numberOfBooks));
 
-        webClient.post()
-                .path("/books")
-                .submit(json)
-                .thenAccept(it -> assertThat("HTTP response POST", it.status(), is(Http.Status.OK_200)))
-                .thenCompose(it -> webClient.get()
-                        .path("/books/123456")
-                        .request(JsonObject.class))
-                .thenAccept(it -> assertThat("Checking if correct ISBN", it.getString("isbn"), is("123456")))
-                .toCompletableFuture()
-                .get();
+            HttpClientResponse response = webClient
+                    .post("/books")
+                    .submit(json);
+            assertThat("HTTP response POST", response.status(), is(Status.OK_200));
 
-        webClient.get()
-                .path("/books/0000")
-                .request()
-                .thenAccept(it -> assertThat("HTTP response GET bad ISBN", it.status(), is(Http.Status.NOT_FOUND_404)))
-                .toCompletableFuture()
-                .get();
+            JsonObject book = webClient
+                    .get("/books/123456")
+                    .requestEntity(JsonObject.class);
+            assertThat("Checking if correct ISBN", book.getString("isbn"), is("123456"));
 
-        webClient.get()
-                .path("/books")
-                .request()
-                .thenApply(it -> {
-                    assertThat("HTTP response list books", it.status(), is(Http.Status.OK_200));
-                    return it;
-                })
-                .thenCompose(WebClientResponse::close)
-                .toCompletableFuture()
-                .get();
+            response = webClient.get()
+                    .path("/books/0000")
+                    .request();
+            assertThat("HTTP response GET bad ISBN", response.status(), is(Status.NOT_FOUND_404));
 
-        webClient.delete()
-                .path("/books/123456")
-                .request()
-                .thenAccept(it -> assertThat("HTTP response delete book", it.status(), is(Http.Status.OK_200)))
-                .toCompletableFuture()
-                .get();
+            response = webClient.delete()
+                    .path("/books/123456")
+                    .request();
+            assertThat("HTTP response DELETE", response.status(), is(Status.OK_200));
 
-        application.stop();
+            bookArray = webClient.get()
+                    .path("/books")
+                    .requestEntity(JsonArray.class);
+            assertThat("Number of books", bookArray.size(), is(numberOfBooks));
+        } finally {
+            application.stop();
+        }
     }
 
     /**
@@ -344,7 +327,7 @@ class MainTest {
      * So we set a system property to select the library to use before starting
      * the server
      *
-     * @param edition     "mp", "se"
+     * @param edition "mp", "se"
      * @param jsonLibrary "jsonp", "jsonb" or "jackson"
      * @param useModules true to use modulepath, false to use classpath
      * @throws Exception on test failure
@@ -364,101 +347,60 @@ class MainTest {
             application = startTheApplication(editionToJarPath(edition), systemPropertyArgs);
         }
 
-        WebClient webClient = WebClient.builder()
-                .baseUri(application.getBaseUrl())
-                .addMediaSupport(JsonpSupport.create())
-                .build();
+        try {
+            WebClient webClient = WebClient.builder()
+                    .baseUri(application.getBaseUrl().toURI())
+                    .build();
 
-        // Get Prometheus style metrics
-        webClient.get()
-                .accept(MediaType.WILDCARD)
-                .path("/metrics")
-                .request(String.class)
-                // Make sure we got prometheus metrics
-                .thenAccept(it -> assertThat("Making sure we got Prometheus format", it, startsWith("# TYPE")))
-                .toCompletableFuture()
-                .get();
+            String payload = webClient.get()
+                    .path("/metrics")
+                    .header(HeaderNames.ACCEPT, MediaTypes.WILDCARD.text())
+                    .requestEntity(String.class);
+            assertThat("Making sure we got Prometheus format", payload, anyOf(startsWith("# TYPE"), startsWith("# HELP")));
 
-        // Get JSON encoded metrics
-        webClient.get()
-                .accept(MediaType.APPLICATION_JSON)
-                .path("/metrics")
-                .request(JsonObject.class)
-                // Makes sure we got JSON metrics
-                .thenAccept(it -> assertThat("Checking request count",
-                                             it.getJsonObject("vendor").getInt("requests.count"),
-                                             greaterThan(0)))
-                .toCompletableFuture()
-                .get();
+            JsonObject jsonObject;
 
-        // Get JSON encoded metrics/base
-        webClient.get()
-                .accept(MediaType.APPLICATION_JSON)
-                .path("/metrics/base")
-                .request(JsonObject.class)
-                // Makes sure we got JSON metrics
-                .thenAccept(it -> assertThat("Checking request count",
-                                             it.getInt("thread.count"),
-                                             greaterThan(0)))
-                .toCompletableFuture()
-                .get();
+            // current metrics implementation not compatible with Jackson
+            if (!Objects.equals(jsonLibrary, "jackson")) {
+                jsonObject = webClient.get()
+                        .path("/metrics")
+                        .header(HeaderNames.ACCEPT, MediaTypes.APPLICATION_JSON.text())
+                        .requestEntity(JsonObject.class);
+                assertThat("Checking request count",
+                        jsonObject.getJsonObject("vendor").getInt("requests.count"), greaterThan(0));
+            }
 
-        // Get JSON encoded health check
-        webClient.get()
-                .accept(MediaType.APPLICATION_JSON)
-                .path("/health")
-                .request(JsonObject.class)
-                .thenAccept(it -> {
-                    assertThat("Checking health status", it.getString("status"), is("UP"));
-                    // Verify that built-in health checks are disabled in MP according to
-                    // 'microprofile-config.properties' setting in bookstore application
-                    if (edition.equals("mp")) {
-                        assertThat("Checking built-in health checks disabled",
-                                   it.getJsonArray("checks").size(),
-                                   is(0));
-                    }
-                })
-                .toCompletableFuture()
-                .get();
-
-        application.stop();
+            jsonObject = webClient.get()
+                    .path("/health")
+                    .header(HeaderNames.ACCEPT, MediaTypes.APPLICATION_JSON.text())
+                    .requestEntity(JsonObject.class);
+            assertThat("Checking health status", jsonObject.getString("status"), is("UP"));
+            if (edition.equals("mp")) {
+                assertThat("Checking built-in health checks disabled",
+                        jsonObject.getJsonArray("checks").size(), is(0));
+            }
+        } finally {
+            application.stop();
+        }
     }
 
     @ParameterizedTest
     @ValueSource(strings = {"se", "mp"})
     void routing(String edition) throws Exception {
-
         HelidonApplication application = startTheApplication(editionToJarPath(edition), Collections.emptyList());
-        WebClient webClient = WebClient.builder()
-                .baseUri(application.getBaseUrl())
-                .addMediaSupport(JsonpSupport.create())
-                .build();
+        try {
+            WebClient webClient = WebClient.builder()
+                    .baseUri(application.getBaseUrl().toURI())
+                    .build();
 
-        webClient.get()
-                .accept(MediaType.APPLICATION_JSON)
-                .skipUriEncoding()
-                .path("/boo%6bs")
-                .request()
-                .thenAccept(it -> {
-                    if ("se".equals(edition)) {
-                        assertThat("Checking encode URL response SE", it.status(), is(Http.Status.OK_200));
-                    } else {
-                        // JAXRS does not decode URLs before matching
-                        assertThat("Checking encode URL response MP", it.status(), is(Http.Status.NOT_FOUND_404));
-                    }
-                })
-                .toCompletableFuture()
-                .get();
-
-        webClient.get()
-                .accept(MediaType.APPLICATION_JSON)
-                .path("/badurl")
-                .request()
-                .thenAccept(it -> assertThat("Checking encode URL response", it.status(), is(Http.Status.NOT_FOUND_404)))
-                .toCompletableFuture()
-                .get();
-
-        application.stop();
+            HttpClientResponse response = webClient.get()
+                    .path("/badurl")
+                    .header(HeaderNames.ACCEPT, MediaTypes.APPLICATION_JSON.text())
+                    .request();
+            assertThat("Checking encode URL response", response.status(), is(Status.NOT_FOUND_404));
+        } finally {
+            application.stop();
+        }
     }
 
     private JsonObject getBookAsJsonObject() throws IOException {
@@ -474,7 +416,7 @@ class MainTest {
         List<String> startArgs = new ArrayList<>(javaArgs);
         startArgs.add("-Dserver.port=" + port);
 
-        if (moduleName != null && ! moduleName.isEmpty() ) {
+        if (moduleName != null && !moduleName.isEmpty()) {
             File jarFile = new File(appJarPath);
             // --module-path target/bookstore-se.jar:target/libs -m io.helidon.tests.apps.bookstore.se/io.helidon.tests.apps.bookstore.se.Main
             startArgs.add("--module-path");
